--- a/BlazorTool.Client/Pages/OrdersPage.razor
+++ b/BlazorTool.Client/Pages/OrdersPage.razor
@@ -76,7 +76,7 @@ else
                 isLoading="@isOrdersLoading" />
 }
 @code {
-    private const string ViewSettingsKey = "orders-grid-settings";
+    private string ViewSettingsKey = ViewSettingsService.SettingsKeys["OrdersPage"];
     private ViewSettings<WorkOrder> _viewSettings;
     private bool isOrdersLoading = false;
     private bool isDevicesLoading = false;
