--- a/BlazorTool.Client/Pages/Home.razor
+++ b/BlazorTool.Client/Pages/Home.razor
@@ -14,7 +14,10 @@
 
 	<TelerikLoaderContainer  Visible="@isDataLoading" Text="@Localizer["Scheduler_LoadingOrders"]" Size="@Telerik.Blazor.ThemeConstants.Loader.Size.Large">
 				</TelerikLoaderContainer>
-	<span class="order-title">@Localizer["Home_MyAssignedOrders"]: @myAssignedOrders.Count()</span>
+			<div class="grid-header">
+				<span class="order-title">@Localizer["Home_MyAssignedOrders"]: @myAssignedOrders.Count()</span>
+				<TelerikButton Icon="@SvgIcon.Plus" Rounded="lg" Size="lg" ThemeColor="primary" OnClick="@AddNewOrder"/>
+			</div>
 	<OrdersGrid @key="@assignedGridKey"
 			   OrdersForGrid="@myAssignedOrders"
 			   workOrderStates="@workOrderStates"
@@ -23,6 +26,7 @@
 			   OnOrderChanged="@((app) => OnOrderChanged(app))"
                OnStateChanged="@(async (GridStateEventArgs<WorkOrder> args) => { _assignedGridSettings.GridState = args.GridState; await SaveStateAsync(AssignedGridSettingsKey, _assignedGridSettings); })"
 			   />
+
 </div>
 
 <div class="orders-grid-container">
@@ -68,9 +72,9 @@
 	private string TakenGridSettingsKey = ViewSettingsService.SettingsKeys["Home-Taken"];
 	private string DepartmentGridSettingsKey = ViewSettingsService.SettingsKeys["Home-Department"];
 
-    private ViewSettings<WorkOrder> _assignedGridSettings = new();
-    private ViewSettings<WorkOrder> _takenGridSettings = new();
-    private ViewSettings<WorkOrder> _departmentGridSettings = new();
+	private ViewSettings<WorkOrder> _assignedGridSettings = new();
+	private ViewSettings<WorkOrder> _takenGridSettings = new();
+	private ViewSettings<WorkOrder> _departmentGridSettings = new();
 
 	private List<WorkOrder> myAssignedOrders = new List<WorkOrder>();
 	private List<WorkOrder> myDepartmentOrders = new List<WorkOrder>();    
@@ -86,49 +90,49 @@
 	private string selectedDepartment = string.Empty;
 	private List<WorkOrder> allOrders = new List<WorkOrder>();
 	private bool isDataLoading = true;
-    private bool hasInitialized = false;
+	private bool hasInitialized = false;
 
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (firstRender && !hasInitialized)
-        {
-            hasInitialized = true;
-            isDataLoading = true;
-            await InvokeAsync(StateHasChanged);
+	protected override async Task OnAfterRenderAsync(bool firstRender)
+	{
+		if (firstRender && !hasInitialized)
+		{
+			hasInitialized = true;
+			isDataLoading = true;
+			await InvokeAsync(StateHasChanged);
 
-            _assignedGridSettings = await ViewSettingsService.LoadSettingsAsync<WorkOrder>(AssignedGridSettingsKey);
-            _takenGridSettings = await ViewSettingsService.LoadSettingsAsync<WorkOrder>(TakenGridSettingsKey);
-            _departmentGridSettings = await ViewSettingsService.LoadSettingsAsync<WorkOrder>(DepartmentGridSettingsKey);
+			_assignedGridSettings = await ViewSettingsService.LoadSettingsAsync<WorkOrder>(AssignedGridSettingsKey);
+			_takenGridSettings = await ViewSettingsService.LoadSettingsAsync<WorkOrder>(TakenGridSettingsKey);
+			_departmentGridSettings = await ViewSettingsService.LoadSettingsAsync<WorkOrder>(DepartmentGridSettingsKey);
 
-            if (UserState.IsAuthenticated)
-            {
-                allOrders = await ApiClient.GetWorkOrdersAsync();
-                allOrders = FilterWorkOrders(allOrders);
-                await ApiClient.GetWODictionaries(UserState.PersonID, UserState.LangCode);
-                allDepartments = ApiClient.GetWODepartments().Select(d => d.Name).ToList();
-                selectedDepartment = _departmentGridSettings.GetCustomFilter("selectedDepartment", allDepartments.FirstOrDefault() ?? "");
-                workOrderStates = allOrders.Select(o => o.WOState ?? string.Empty).Distinct().ToList();
-                TakeListsOrders();
-            }
+			if (UserState.IsAuthenticated)
+			{
+				allOrders = await ApiClient.GetWorkOrdersAsync();
+				allOrders = FilterWorkOrders(allOrders);
+				await ApiClient.GetWODictionaries(UserState.PersonID, UserState.LangCode);
+				allDepartments = ApiClient.GetWODepartments().Select(d => d.Name).ToList();
+				selectedDepartment = _departmentGridSettings.GetCustomFilter("selectedDepartment", allDepartments.FirstOrDefault() ?? "");
+				workOrderStates = allOrders.Select(o => o.WOState ?? string.Empty).Distinct().ToList();
+				TakeListsOrders();
+			}
 
-            isDataLoading = false;
-            await InvokeAsync(StateHasChanged);
+			isDataLoading = false;
+			await InvokeAsync(StateHasChanged);
 
-            // Apply the state after the data is loaded and the grids are rendered
-            if (AssignedGrid != null) await AssignedGrid.ApplyStateAsync(_assignedGridSettings.GridState);
-            if (TakenGrid != null) await TakenGrid.ApplyStateAsync(_takenGridSettings.GridState);
-            if (DepsGrid != null) await DepsGrid.ApplyStateAsync(_departmentGridSettings.GridState);
-        }
-    }
+			// Apply the state after the data is loaded and the grids are rendered
+			if (AssignedGrid != null) await AssignedGrid.ApplyStateAsync(_assignedGridSettings.GridState);
+			if (TakenGrid != null) await TakenGrid.ApplyStateAsync(_takenGridSettings.GridState);
+			if (DepsGrid != null) await DepsGrid.ApplyStateAsync(_departmentGridSettings.GridState);
+		}
+	}
 
-    private async Task SaveStateAsync(string key, ViewSettings<WorkOrder> settings)
-    {
-        if (key == DepartmentGridSettingsKey)
-        {
-            settings.SetCustomFilter("selectedDepartment", selectedDepartment);
-        }
-        await ViewSettingsService.SaveSettingsAsync(key, settings);
-    }
+	private async Task SaveStateAsync(string key, ViewSettings<WorkOrder> settings)
+	{
+		if (key == DepartmentGridSettingsKey)
+		{
+			settings.SetCustomFilter("selectedDepartment", selectedDepartment);
+		}
+		await ViewSettingsService.SaveSettingsAsync(key, settings);
+	}
 
 	private async Task OnDepartmentChanged(string department)
 	{
@@ -154,6 +158,7 @@
 		myTakenWorkOrders = allOrders.Where(o => o.CloseDate == null).Where(o => o.TakePersons?.Split('#').Contains(UserState.PersonID.ToString()) ?? false).ToList();
 		StateHasChanged();
 	}
+
 	private void ConsoleLogOrder(string listName, List<WorkOrder> orders)
 	{
 		Console.WriteLine($"========== Logging orders for: {listName} ================");
@@ -169,6 +174,12 @@
 		return orders
 			.Where(o => o.CloseDate == null)
 			.OrderByDescending(o => o.ModDate)
-            .ToList();
+			.ToList();
+	}
+
+	private void AddNewOrder()
+	{
+		AssignedGrid?.AddNewOrderWindow();
+		TakeListsOrders();
 	}
 }
